# UNL-UAV

./: .gitignore  .gitmodules  CONTRIBUTING.md  LICENSE  README.md
px4_configs/: sim_no_gcs.txt
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build  latest_version-check
ros2_ws/src/control/: package.xml  setup.py
ros2_ws/src/control/config/: control_params.yaml
ros2_ws/src/control/control/: px4_control_node.py
ros2_ws/src/drop_detect/: package.xml  setup.cfg  setup.py
ros2_ws/src/mission/: package.xml  setup.py
ros2_ws/src/mission/action/: GoToWaypoint.action
ros2_ws/src/mission/mission/: mission_planner_node.py
ros2_ws/src/mission_planner/: package.xml  setup.py
ros2_ws/src/obstacle_detect/: package.xml  setup.cfg  setup.py
ros2_ws/src/payload/: package.xml  setup.py
ros2_ws/src/payload_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/position_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/px4_ctrl_ex/: setup.cfg  setup.py
ros2_ws/src/radio_monitor/: package.xml  setup.cfg  setup.py
ros2_ws/src/safety_monitor/: package.xml  setup.py
ros2_ws/src/uav_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/uav_interfaces/action/: GoToPos.action  GoToWaypoint.action
ros2_ws/src/uav_interfaces/msg/: MissionState.msg  UavPos.msg  Waypoint.msg
ros2_ws/src/uav_interfaces/srv/: PayloadControl.srv
ros2_ws/src/uav_models/: CMakeLists.txt  package.xml
ros2_ws/src/vision/: package.xml  setup.py
scripts/: install_setup.sh  kill_sim.sh  launch_sim.sh
todo/: next_steps_2025-11-12.md  owner_contribute.md
(+30 files in other folders)
